ingress-controller/path-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
spec:
  replicas: 3
  selector:
    matchLabels:
      app:  httpd
  template:
    metadata:
      labels:
        app:  httpd
    spec:
      containers:
      - name: httpd
        image:  httpd
        ports:
        - containerPort:  80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  type: ClusterIP
  selector:
    app:  httpd
  ports:
  - port: 80
